# mirl_input

./: Cargo.toml  README.md
src/: build.rs  formats.rs  lib.rs  prelude.rs
src/keyboard/: keybinds.rs  keyboard_manager.rs  keycodes.rs  mod.rs
src/mouse/: button_state.rs  mod.rs  mouse_button_state.rs  mouse_manager.rs  mouse_snapshot.rs
src/mouse/cursors/: cursor_resolution.rs  custom_cursor_resolution.rs  default_cursor_selection.rs  default_cursors.rs  mod.rs
src/mouse/cursors/raw_cursors/: animated_raw_cursor.rs  animated_raw_cursor_with_resolution.rs  animated_raw_svg_cursor.rs  mod.rs  raw_cursor.rs  raw_cursor_with_resolution.rs  raw_svg_cursor.rs
src/mouse/loading/: cursors.7z  mod.rs
