[package]
name = "mirl_input"
version = "0.0.0-alpha"
edition = "2024"
repository.workspace = true
license.workspace = true
authors.workspace = true
# # GLFW
# glfw = { version = "0.51.0", optional = true }

# gl = { version = "0.14.0", optional = true }

[features]
all = [
    "cursor_loading",
    "all_codecs",
    "all_enum_extensions",
    "mirl_buffer/all",
    "mirl_graphics/all",
]
_checking = ["all", "cursor_show_hotspot"]
# Does nothing by itself. Needs another codec or enum flag to do something
mirl_derive = ["dep:mirl_derive", "mirl_buffer/mirl_derive", "mirl_graphics/mirl_derive"]
# Compatibility with ffi
c_compatible = ["mirl_derive", "mirl_buffer/c_compatible", "mirl_graphics/c_compatible"]
# Enables all codecs
all_codecs = [
    "serde",
    "bitcode",
    "wincode",
    "compactly",
    "zerocopy",
    "mirl_buffer/all_codecs",
    "mirl_graphics/all_codecs",
]
# # All enum extensions
all_enum_extensions = ["strum", "enum_ext"]
# Codec stuff
serde = [
    "dep:serde",
    "mirl_derive",
    "bitcode?/serde",
    "mirl_buffer/serde",
    "mirl_graphics/serde",
]
bitcode = ["dep:bitcode", "mirl_derive", "mirl_buffer/bitcode", "mirl_graphics/bitcode"]
wincode = ["dep:wincode", "mirl_derive", "mirl_buffer/wincode", "mirl_graphics/wincode"]
compactly = [
    "dep:compactly",
    "mirl_derive",
    "mirl_buffer/compactly",
    "mirl_graphics/compactly",
]
zerocopy = [
    "dep:zerocopy",
    "mirl_derive",
    "mirl_buffer/zerocopy",
    "mirl_graphics/zerocopy",
]
# Enum extensions
strum = ["dep:strum", "mirl_derive", "mirl_graphics/strum"]
enum_ext = ["dep:enum_ext", "mirl_derive", "mirl_graphics/enum_ext"]
cursor_loading = ["dep:sevenz-rust2"]
# glfw = ["dep:glfw", "dep:gl"]
cursor_show_hotspot = []

[dependencies]
bitcode = { version = "0.6", optional = true, default-features = false, features = [
    "derive",
] }
# Codec
compactly = { version = "0.1", optional = true }
enum_ext = { version = "0.6", optional = true, default-features = false }
# mirl_core = { version = "0.0.0-alpha" }
mirl_buffer = { version = "0.0.0-alpha" }
mirl_derive = { version = "0.0.0-alpha", optional = true }
mirl_graphics = { version = "0.0.0-alpha", features = ["svg"] }
serde = { version = "1.0", optional = true, default-features = false, features = [
    "derive",
] }
sevenz-rust2 = { version = "0.21", default-features = false, optional = true }
# Enum functionality
strum = { version = "0.28", optional = true, default-features = false, features = [
    "derive",
] }
wincode = { version = "0.5", optional = true, features = ["derive"] }
zerocopy = { version = "0.8", optional = true, default-features = false, features = [
    "float-nightly",
    "derive",
] }

[build-dependencies]
mirl_build_tools = { workspace = true }

[lints]
workspace = true
